[project]
name = "gcctx"
version = "0.1.0"
description = "gcloud config configurations wrapper"
authors = [
    { name = "ykamenashi" }
]
dependencies = [
    "click>=8.0.0",
]
requires-python = ">=3.9"

[project.scripts]
gcctx = "gcctx.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
